--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "csurf": "^1.10.0",
+    "db-migrate": "^0.11.6",
+    "db-migrate-mysql": "^1.1.10",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
