--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "session-file-store": "^1.3.0",
     "twig": "^1.13.3"
   },
